<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <!-- 1、填写用户信息-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tip_table_user_info"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="@dimen/left_key_width"
                android:layout_height="wrap_content"
                android:text="@string/tip_user_id"/>

            <View
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/userid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:lines="1"
                android:hint="@string/tip_user_id"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="@dimen/left_key_width"
                android:layout_height="wrap_content"
                android:text="@string/tip_platform"/>

            <View
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/platform"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:lines="1"
                android:hint="@string/tip_platform"/>

        </LinearLayout>

        <!-- 2、车辆信息 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tip_table_car_info"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="@dimen/left_key_width"
                android:layout_height="wrap_content"
                android:text="@string/tip_licenseno"/>

            <View
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/licenseno"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:lines="1"
                android:hint="@string/tip_licenseno"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="@dimen/left_key_width"
                android:layout_height="wrap_content"
                android:text="@string/tip_engineno"/>

            <View
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/engineno"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:lines="1"
                android:hint="@string/tip_engineno"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="@dimen/left_key_width"
                android:layout_height="wrap_content"
                android:text="@string/tip_cartypecode"/>

            <View
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/cartypecode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:lines="1"
                android:hint="@string/tip_cartypecode"
                android:text="02"
                android:editable="false"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="@dimen/left_key_width"
                android:layout_height="wrap_content"
                android:text="@string/tip_vehicletype"/>

            <View
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/vehicletype"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:lines="1"
                android:hint="@string/tip_vehicletype"
                android:text="03"
                android:editable="false"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="@dimen/left_key_width"
                android:layout_height="wrap_content"
                android:text="@string/tip_carid"/>

            <View
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/carid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:lines="1"
                android:hint="@string/tip_carid"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="@dimen/left_key_width"
                android:layout_height="wrap_content"
                android:text="@string/tip_carmodel"/>

            <View
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/carmodel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:lines="1"
                android:hint="@string/tip_carmodel"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="@dimen/left_key_width"
                android:layout_height="wrap_content"
                android:text="@string/tip_carregtime"/>

            <View
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/carregtime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:lines="1"
                android:hint="@string/tip_carregtime"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="@dimen/left_key_width"
                android:layout_height="wrap_content"
                android:text="@string/tip_envGrade"/>

            <View
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/envGrade"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:lines="1"
                android:hint="@string/tip_envGrade"
                android:text="3"
                android:editable="false"/>

        </LinearLayout>

        <!-- 3、个人信息 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tip_table_person_info"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="@dimen/left_key_width"
                android:layout_height="wrap_content"
                android:text="@string/tip_drivername"/>

            <View
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/drivername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:lines="1"
                android:hint="@string/tip_drivername"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="@dimen/left_key_width"
                android:layout_height="wrap_content"
                android:text="@string/tip_driverlicenseno"/>

            <View
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/driverlicenseno"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:lines="1"
                android:hint="@string/tip_driverlicenseno"/>

        </LinearLayout>

        <!-- 4、保存上面信息到配置文件 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tip_table_save_info"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <Button
                android:id="@+id/btn_save_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_profile" />

            <View
                android:layout_width="10dp"
                android:layout_height="match_parent"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:singleLine="false"
                android:minLines="3"
                android:text="@string/tip_save_profile"
                android:autoLink="all"
                android:linksClickable="true"/>

        </LinearLayout>

        <!-- 4、签名信息 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tip_table_sign_info"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <Button
                android:id="@+id/btn_choose_file"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_zip_file" />

            <View
                android:layout_width="10dp"
                android:layout_height="match_parent"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:singleLine="false"
                android:minLines="3"
                android:text="@string/tip_choose_zip_file"
                android:autoLink="all"
                android:linksClickable="true"/>

        </LinearLayout>

        <!-- 5、查询车辆列表信息 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tip_table_car_list_info"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <Button
                android:id="@+id/btn_enter_car_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_car_list" />

            <View
                android:layout_width="10dp"
                android:layout_height="match_parent"/>

            <TextView
                android:id="@+id/tv_car_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:singleLine="false"
                android:minLines="3"
                android:hint="@string/tip_enter_car_list"/>

        </LinearLayout>

        <!-- 6、提交表单申请 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tip_table_submit_paper"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <Button
                android:id="@+id/btn_submit_paper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit_paper" />

            <View
                android:layout_width="10dp"
                android:layout_height="match_parent"/>

            <TextView
                android:id="@+id/tv_submit_response"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:singleLine="false"
                android:minLines="3"
                android:hint="@string/tip_submit_paper"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>
